# app/controller/user_controller.go
@@ -2,18 +2,20 @@ package controller
 
 import (
 	"go-fiber/platform/database"
+	"math"
 
 	"github.com/gofiber/fiber/v2"
 )
 
-// User requests.
+// GetUsers returns a paginated list of users.
 //
-//	@Summary		Show the Users list to server.
-//	@Description	get Users list of server.
+//	@Summary		Show list of users
+//	@Description	Get a paginated list of users from the server
 //	@Tags			User
-//	@Accept			*/*
+//	@Accept			json
 //	@Produce		json
-//	@Success		200	"user list"
+//	@Param			page	query		int	false	"Page number (default 1)"
+//	@Param			limit	query		int	false	"Page size (default 10)"
 //	@Security		BearerAuth
 //	@Router			/api/v1/user [get]
 func GetUsers(c *fiber.Ctx) error {
@@ -26,8 +28,21 @@ func GetUsers(c *fiber.Ctx) error {
 		})
 	}
 
+	page := c.QueryInt("page", 1)
+	limit := c.QueryInt("limit", 25)
+	offset := (page - 1) * limit
+
+	if page < 1 || limit < 1 {
+		return c.Status(fiber.StatusBadRequest).JSON((fiber.Map{
+			"error": true,
+			"msg":   "page or limit must have value",
+			"count": 0,
+			"user":  nil,
+		}))
+	}
+
 	// Get all users.
-	users, err := db.GetUsers()
+	users, total, err := db.GetUsers(limit, offset)
 	if err != nil {
 		// Return, if users not found.
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
@@ -38,12 +53,17 @@ func GetUsers(c *fiber.Ctx) error {
 		})
 	}
 
+	totalPages := int(math.Ceil(float64(total) / float64(limit)))
+
 	// Return status 200 OK.
 	return c.JSON(fiber.Map{
 		"error": false,
 		"msg":   nil,
-		"count": len(users),
-		"users": users,
+		"page":  page,
+		"limit": limit,
+		// "count":      len(users),
+		"total":      total,
+		"totalPages": totalPages,
+		"users":      users,
 	})
-
 }
