# docs/swagger.yaml
@@ -197,16 +197,23 @@ paths:
   /api/v1/user:
     get:
       consumes:
-      - '*/*'
-      description: get Users list of server.
+      - application/json
+      description: Get a paginated list of users from the server
+      parameters:
+      - description: Page number (default 1)
+        in: query
+        name: page
+        type: integer
+      - description: Page size (default 10)
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
-      responses:
-        "200":
-          description: user list
+      responses: {}
       security:
       - BearerAuth: []
-      summary: Show the Users list to server.
+      summary: Show list of users
       tags:
       - User
   /api/v1/user/sign/up:
